language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_variable_in_anonymous_fn_in_argument.snap
---
source: language-server/src/tests/action.rs
expression: "fn map(value, fn_over_value) { todo }\n\npub fn main() {\n  1\n  |> Ok\n  |> map(fn(value) { value + 2 })\n}"
---
----- BEFORE ACTION
fn map(value, fn_over_value) { todo }

pub fn main() {
  1
  |> Ok
  |> map(fn(value) { value + 2 })
                             ↑   
}


----- AFTER ACTION
fn map(value, fn_over_value) { todo }

pub fn main() {
  1
  |> Ok
  |> map(fn(value) { let int = 2
  value + int })
}
