language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_variable_in_block.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  {\n    todo\n    wibble([1, 2, 3])\n    todo\n  }\n}"
---
----- BEFORE ACTION
pub fn main() {
  {
    todo
    wibble([1, 2, 3])
               ▔▔▔↑  
    todo
  }
}


----- AFTER ACTION
pub fn main() {
  {
    todo
    let ints = [1, 2, 3]
    wibble(ints)
    todo
  }
}
