language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_variable_in_case_branch.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n    case wibble {\n      _ -> [1, 2, 3]\n    }\n}"
---
----- BEFORE ACTION
pub fn main() {
    case wibble {
      _ -> [1, 2, 3]
           ↑        
    }
}


----- AFTER ACTION
pub fn main() {
    case wibble {
      _ -> {
        let ints = [1, 2, 3]
        ints
      }
    }
}
