language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_variable_in_case_branch_from_second_arg.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  case todo {\n    Ok(_) -> #(Ok(1), Error(\"s\"))\n    Error(_) -> panic\n  }\n}"
---
----- BEFORE ACTION
pub fn main() {
  case todo {
    Ok(_) -> #(Ok(1), Error("s"))
                      ↑          
    Error(_) -> panic
  }
}


----- AFTER ACTION
pub fn main() {
  case todo {
    Ok(_) -> {
      let result = Error("s")
      #(Ok(1), result)
    }
    Error(_) -> panic
  }
}
