language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_variable_in_case_branch_using_var.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  case todo {\n    Ok(value) -> 2 * value + 1\n    Error(_) -> panic\n  }\n}"
---
----- BEFORE ACTION
pub fn main() {
  case todo {
    Ok(value) -> 2 * value + 1
                 ▔▔▔▔↑        
    Error(_) -> panic
  }
}


----- AFTER ACTION
pub fn main() {
  case todo {
    Ok(value) -> {
      let int = 2 * value
      int + 1
    }
    Error(_) -> panic
  }
}
