language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_variable_in_multiline_case_subject_branch.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n    case\n        list.map(\n          [1, 2, 3],\n          int.add(1, _)\n        )\n    {\n      _ -> todo\n    }\n}"
---
----- BEFORE ACTION
pub fn main() {
    case
        list.map(
          [1, 2, 3],
          ↑         
          int.add(1, _)
        )
    {
      _ -> todo
    }
}


----- AFTER ACTION
pub fn main() {
    let ints = [1, 2, 3]
    case
        list.map(
          ints,
          int.add(1, _)
        )
    {
      _ -> todo
    }
}
