language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_variable_in_use.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n    use <- wibble([1, 2, 3])\n    todo\n}"
---
----- BEFORE ACTION
pub fn main() {
    use <- wibble([1, 2, 3])
                  ↑         
    todo
}


----- AFTER ACTION
pub fn main() {
    let ints = [1, 2, 3]
    use <- wibble(ints)
    todo
}
