language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_variable_inside_multiline_function_call.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  list.map(\n    [1, 2, 3],\n    int.add(1, _),\n  )\n}"
---
----- BEFORE ACTION
pub fn main() {
  list.map(
    [1, 2, 3],
    ↑         
    int.add(1, _),
  )
}


----- AFTER ACTION
pub fn main() {
  let ints = [1, 2, 3]
  list.map(
    ints,
    int.add(1, _),
  )
}
