language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_variable_inside_use_body.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n    use <- wibble(todo)\n    list.map([1, 2, 3], int.add(1, _))\n    todo\n}"
---
----- BEFORE ACTION
pub fn main() {
    use <- wibble(todo)
    list.map([1, 2, 3], int.add(1, _))
             ↑                        
    todo
}


----- AFTER ACTION
pub fn main() {
    use <- wibble(todo)
    let ints = [1, 2, 3]
    list.map(ints, int.add(1, _))
    todo
}
